# beryldb-cli

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  config.yml  configure  configure.ac  demo.yml  libtool
.github/workflows/: ci-fedora.yml  ci-ios.yml  ci-linux.yml  ci-macos.yml  ci-ubuntu.yml  ci-windows.yml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.1  traces.2  traces.3  traces.4  traces.5
docs/conf/: beryl-cli.conf.example
emerald/include/: adaptables.h  config.h  emerald.h  engine.h  handlers.h  methods.h  protocols.h
emerald/run/: beryldb-cli.1  beryldb-cli.conf
emerald/src/: base.cpp  engine.cpp  filehandler.cpp  handlers.cpp  match.cpp  nodes.cpp  server.cpp  utils.cpp
emerald/win32/: emerald_win32.h
include/: .#timer.h  adaptables.h  base.h  colors.h  configprocess.h  converter.h  emerald.h  engine.h  exit.h  filehandler.h  flat_map.h  forwards.h  handlers.h  logs.h  methods.h  nodes.h  protocols.h  server.h  stackconf.h  stdhelpers.h  timer.h  typedefs.h  utils.h
make/: brld.pm  build  checkenv.pl  configure.pm  environment.pm  links.pl  utils.pm
make/models/: beryl-cli.1  config.h  constants.h  main.mk
make/template/: config.h  constants.h  main.mk
make/test/: clock_gettime.cpp  compiler.cpp
run/: beryldb-cli.conf
run/conf/: beryl-cli.conf
src/: base.cpp  configprocess.cpp  emerald.cpp  engine.cpp  filehandler.cpp  handlers.cpp  logs.cpp  match.cpp  methods.cpp  nodes.cpp  server.cpp  stackconf.cpp  timers.cpp  utils.cpp  version.sh
